--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,28 +4,33 @@ SET(CMAKE_SYSTEM_NAME Generic)
 SET(CMAKE_C_COMPILER avr-gcc)
 SET(CMAKE_CXX_COMPILER avr-g++)
 
-SET(CSTANDARD "-std=gnu99")
+SET(CSTANDARD "-std=gnu11")
 SET(CPPSTANDARD "-std=gnu++11")
-SET(CDEBUG "-gstabs")
-SET(CWARN "-Wall -Wstrict-prototypes")
-SET(CTUNING "-funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums -fno-threadsafe-statics -fno-exceptions")
-SET(COPT "-Os")
-SET(CMCU "-mmcu=atmega32u4")
+
+SET(WARN "-Wall -Wextra")
+SET(CPPTUNING "-fno-exceptions -fno-threadsafe-statics")
+SET(OPT "-Os -ffunction-sections -fdata-sections -flto -fno-fat-lto-objects")
+SET(MCU "-mmcu=atmega32u4")
 
 add_compile_definitions(
 	F_CPU=16000000
+	ARDUINO=10805
+	ARDUINO_AVR_prusa_mm_control
+	ARDUINO_ARCH_AVR
 	USB_VID=0x2c99
 	USB_PID=0x0004
 	USB_MANUFACTURER="Unknown"
 	USB_PRODUCT="Original Prusa i3 MK3 Multi Material 2.0 upgrade"
-	ARDUINO=185
 )
 
-SET(CFLAGS "${CMCU} ${CDEBUG} ${CDEFS} ${CINCS} ${COPT} ${CWARN} ${CSTANDARD} ${CEXTRA}")
-SET(CXXFLAGS "${CMCU} ${CDEFS} ${CINCS} ${COPT} ${CPPSTANDARD} ${CTUNING}")
+SET(CFLAGS "${OPT} ${WARN} ${CSTANDARD} ${MCU}")
+SET(CXXFLAGS "${OPT} ${WARN} ${CPPSTANDARD} ${CPPTUNING} ${MCU}")
+SET(ASMFLAGS "${OPT} ${WARN} ${MCU}")
 
 SET(CMAKE_C_FLAGS ${CFLAGS})
 SET(CMAKE_CXX_FLAGS ${CXXFLAGS})
+SET(CMAKE_ASM_FLAGS ${ASMFLAGS})
+
 
 project(MM-control-01 C CXX ASM)
 
