--- a/MM-control-01/version.h.in
+++ b/MM-control-01/version.h.in
@@ -1,9 +1,14 @@
+//! @file
+
 #ifndef VERSION_H_
 #define VERSION_H_
 
 #define FW_VERSION 100 //!< example: 103 means version 1.0.3
 #define FW_BUILDNR ${GIT_COMMITS_MASTER} //!< number of commits in 'master'
 #define FW_HASH "${GIT_COMMIT_HASH}"
-#define FW_LOCAL_CHANGES "${GIT_LOCAL_CHANGES}" //!< "CLEAN" no changes in tracked local files, "DIRTY" some local git tracked files has been changed
+//! @macro FW_LOCAL_CHANGES
+//! @val 0 no changes in tracked local files
+//! @val 1 some local git tracked files has been changed
+#include "dirty.h"
 
 #endif //VERSION_H_
