--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@
 /main.cpp~RFdf1346e.TMP
 /__vm/.MM-control-01.vsarduino.h
 Doc
+.pioenvs
+.piolibdeps
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
