--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 dist: trusty
-before_install:
-  - sudo apt-get install -y ninja
+addons:
+  apt:
+    packages:
+    - ninja
 script:
   - bash -x test.sh
   - bash -x build.sh
