--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -12,7 +12,10 @@ target_include_directories(Catch INTERFACE ${CATCH_INCLUDE_DIR})
 # Make test executable
 add_executable(tests
 	tests.cpp
-	Example_test.cpp	
+	Example_test.cpp
+	../MM-control-01/permanent_storage.cpp
+	permanent_storage_test.cpp
 )
 
 target_link_libraries(tests Catch)
+target_include_directories(tests PRIVATE .)
