--- a/MM-control-01/version.h.in
+++ b/MM-control-01/version.h.in
@@ -6,6 +6,7 @@
 #define FW_VERSION 102 //!< example: 103 means version 1.0.3
 #define FW_BUILDNR ${GIT_COMMITS_MASTER} //!< number of commits in 'master'
 #define FW_HASH "${GIT_COMMIT_HASH}"
+// #define FW_12V // for mk25
 //! @macro FW_LOCAL_CHANGES
 //! @val 0 no changes in tracked local files
 //! @val 1 some local git tracked files has been changed
