--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ dist: trusty
 before_install:
   - sudo apt-get install -y ninja-build
 script:
+  - git rev-list --count HEAD
   - bash -x test.sh
   - bash -x build.sh
 deploy:
