--- a/MM-control-01/version.h.in
+++ b/MM-control-01/version.h.in
@@ -4,7 +4,7 @@
 #define VERSION_H_
 
 static const uint16_t fw_version = 102; //!< example: 103 means version 1.0.3
-static const uint16_t fw_buildnr = ${GIT_COMMITS_MASTER}; //!< number of commits in 'master'
+static const uint16_t fw_buildnr = ${GIT_PARENT_COMMITS}; //!< number of commits preceeding current HEAD
 #define FW_HASH "${GIT_COMMIT_HASH}"
 //! @macro FW_LOCAL_CHANGES
 //! @val 0 no changes in tracked local files
