--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: trusty
 before_install:
   - sudo apt-get install -y ninja-build
 script:
-  - git fetch --unshallow
+  - git fetch --unshallow || if [ $? -eq 128 ]; then true; else false; fi
   - git rev-list --count HEAD
   - bash -x test.sh
   - bash -x build.sh
