--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ set(SOURCES
 	MM-control-01/abtn3.c
 	MM-control-01/adc.c
 	MM-control-01/motion.cpp
+	MM-control-01/stepper.cpp
 	MM-control-01/main.cpp
 	MM-control-01/tmc2130.c
 	MM-control-01/permanent_storage.cpp
@@ -65,7 +66,6 @@ set(SOURCES
 	MM-control-01/uart.cpp
 	MM-control-01/shr16.c
 	MM-control-01/mmctl.cpp
-	MM-control-01/spi.c
 	core/abi.cpp
 	core/hooks.c
 	core/Stream.cpp
