--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ before_install:
   - sudo apt-get install -y ninja-build
   - sudo apt-get install -y srecord
   - sudo apt-get install -y doxygen
+  - sudo apt-get install -y graphviz
+  - sudo apt-get install -y plantuml
 script:
   - git fetch --unshallow || if [ $? -eq 128 ]; then true; else false; fi
   - git rev-list --count HEAD
