--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
-dist: trusty
+dist: xenial
 before_install:
   - sudo apt-get install -y ninja-build
   - sudo apt-get install -y srecord
-  - sudo apt-get update
   - sudo apt-get install -y doxygen
   - sudo apt-get install -y graphviz
   - sudo apt-get install -y plantuml
