--- a/MM-control-01/configuration_MMUv2.h.in
+++ b/MM-control-01/configuration_MMUv2.h.in
@@ -1,11 +1,17 @@
 #ifndef CONFIGURATION_H
 #define CONFIGURATION_H
 
-static const int selector_steps_after_homing = -3700;
-static const int idler_steps_after_homing = -130;
+// MMUv2 configuration
+// edit input file configuration_MMUv2.h.in
 
-static const int selector_steps = 2790/4;
-static const int idler_steps = 1420 / 4;    // 2 msteps = 180 / 4
-static const int idler_parking_steps = (idler_steps / 2) + 40;  // 40
+static constexpr int idler_homing_direction = 1;
+
+static constexpr int selector_steps_after_homing = -3700;
+static constexpr int idler_steps_after_homing = -130;
+
+static constexpr int selector_steps = 2790/4;
+static constexpr int idler_steps = 1420 / 4;    // 2 msteps = 180 / 4
+static constexpr int idler_parking_steps = (idler_steps / 2) + 40;  // 40
+static constexpr bool idler_single_parking_position = false;
 
 #endif //CONFIGURATION_H
