--- a/MM-control-01/configuration_MMUv2.h.in
+++ b/MM-control-01/configuration_MMUv2.h.in
@@ -15,6 +15,7 @@ static constexpr int idler_steps_after_homing = -130;
 static constexpr int selector_steps = 2790/4;
 static constexpr int idler_steps = 1420 / 4;    // 2 msteps = 180 / 4
 static constexpr int idler_parking_steps = (idler_steps / 2) + 40;  // 40
+static constexpr int pulley_parking_steps = 600;
 static constexpr bool idler_single_parking_position = false;
 
 #endif //CONFIGURATION_H
